Addressed style/spacing issues.

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -62,6 +62,7 @@ input[type="radio"]:checked:hover
 
 /* for radio buttons */
 fieldset {
+  margin-top: 14px;
   border: 1px solid var(--color-grey-light);
 }
 fieldset legend {
