--- a/src/css/settings.css
+++ b/src/css/settings.css
@@ -10,8 +10,20 @@ select {
 .actions {
   width: 100%;
   text-align: center;
-  margin-top: 8px;
+  margin-top: 40px;
   padding-bottom: 20px;
+}
+
+.no-top-margin {
+  margin-top: 0px !important;
+}
+.no-bottom-margin {
+  margin-bottom: 0px !important;
+}
+.settings-title {
+  margin-top: 30px;
+  padding-bottom: 6px;
+  border-bottom: 1px solid var(--color-grey-light);
 }
 
 .shortcut-table {
@@ -25,7 +37,7 @@ select {
 .settings-text {
   color: var(--color-settings-explaination-text);
   font-size: .86em;
-  margin-top: -10px;
+  margin-top: 12px;
 }
 
 .select-group {
